--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Rami Sabbagh <rami.sab07@gmail.com>",
   "license": "AGPL-3.0",
   "private": true,
+  "type": "commonjs",
   "scripts": {
     "dev": "ts-node src/index.ts",
     "build": "tsc"
@@ -17,6 +18,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "prom-client": "^14.0.1"
   }
 }
