--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.23",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "express": "^4.17.3",
     "prom-client": "^14.0.1"
   }
 }
