Create a vscode task for building the docker image

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,6 +17,16 @@
 				"showReuseMessage": false,
 				"clear": true,
 			}
+		},
+		{
+			"type": "docker-build",
+			"label": "docker: build",
+			"platform": "node",
+			"group": "build",
+			"dockerBuild": {
+				"context": "${workspaceFolder}",
+				"tag": "td-w8968_exporter:latest",
+			}
 		}
 	]
 }
