--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -35,12 +35,11 @@ jobs:
         with:
           push: true
           tags: ramisab/td-w8968_exporter:latest
-          file: packages/bot/Dockerfile
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
       
       - name: Image digest
-        run: echo ${{ steps.docker_bot_build.outputs.digest }}
+        run: echo ${{ steps.docker_build.outputs.digest }}
         
       # Temp fix
       # https://github.com/docker/build-push-action/issues/252
