--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -34,6 +34,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
+          context: .
+          platforms: linux/amd64,linux/arm64
           tags: ramisab/td-w8968_exporter:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
